[package]
name = "papa-dai-deneg"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.81" } #, features = ["preserve_order"] }
# regex = "1.5.4"

hex = "0.4.3"
parity-scale-codec = "3.1.5"

# ws = "0.9.2"
sp-core = "11.0.0"
#sp-core = { version = "9.0.0", default-features = false }

jsonrpsee = {version = "0.15.1", features = ["ws-client"]}
